--- a/package.json
+++ b/package.json
@@ -1,54 +1,49 @@
 {
-  "name": "sadhu-company-platform",
+  "name": "genzflow-platform",
   "version": "1.0.0",
-  "description": "Company Management Platform for Sadhu",
+  "description": "GenZFlow - Where all tasks, teams, and time flow together",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "axios": "^1.3.4",
-    "react-query": "^3.39.3",
-    "react-hook-form": "^7.43.5",
-    "react-hot-toast": "^2.4.0",
-    "lucide-react": "^0.263.1",
-    "recharts": "^2.5.0",
-    "date-fns": "^2.29.3",
-    "web-vitals": "^2.1.4"
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
+  "scripts": {
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && npm run dev",
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:frontend": "cd frontend && npm run build",
+    "build:backend": "cd backend && npm run build",
+    "test": "npm run test:frontend && npm run test:backend",
+    "test:frontend": "cd frontend && npm test",
+    "test:backend": "cd backend && npm test",
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "deploy:frontend": "cd frontend && npm run build",
+    "deploy:backend": "cd backend && npm run build",
+    "lint": "npm run lint:frontend && npm run lint:backend",
+    "lint:frontend": "cd frontend && npm run lint",
+    "lint:backend": "cd backend && npm run lint"
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "concurrently": "^8.2.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "keywords": [
+    "genzflow",
+    "company-management",
+    "task-management",
+    "workflow",
+    "react",
+    "nodejs",
+    "mysql"
+  ],
+  "author": "GenZFlow",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sadhu2005/GenZFlow.git"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "bugs": {
+    "url": "https://github.com/Sadhu2005/GenZFlow/issues"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "homepage": "https://genzflow.genzspace.in"
 }
