--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         cache-dependency-path: frontend/package-lock.json
     
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     
     - name: Run frontend tests
       run: npm test -- --coverage --watchAll=false
@@ -59,7 +59,7 @@ jobs:
         cache-dependency-path: backend/package-lock.json
     
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     
     - name: Run backend tests
       run: npm test
