--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         cache-dependency-path: frontend/package-lock.json
     
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     
     - name: Run linting
       run: npm run lint || echo "Linting not configured yet"
@@ -60,7 +60,7 @@ jobs:
         cache-dependency-path: backend/package-lock.json
     
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     
     - name: Run linting
       run: npm run lint || echo "Linting not configured yet"
