--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "test": "echo 'No tests configured yet' && exit 0",
+    "lint": "echo 'No linting configured yet' && exit 0"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
