Fix FTP deployment issues: Add troubleshooting guide, improve FTP settings, and create manual deployment workflow

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -44,6 +44,8 @@ jobs:
         server: ${{ secrets.HOSTINGER_FTP_HOST }}
         username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
         password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
+        port: 21
+        protocol: ftp
         local-dir: ./frontend/dist/
         server-dir: /public_html/
         exclude: |
@@ -58,6 +60,8 @@ jobs:
         server: ${{ secrets.HOSTINGER_FTP_HOST }}
         username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
         password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
+        port: 21
+        protocol: ftp
         local-dir: ./backend/
         server-dir: /backend/
         exclude: |
