--- a/.github/workflows/simple-deploy.yml
+++ b/.github/workflows/simple-deploy.yml
@@ -3,76 +3,75 @@ name: Simple GenZFlow Deploy
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual trigger
 
 jobs:
-  deploy:
+  build-and-upload:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-    
-    # Build Frontend
+        cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
+
     - name: Install Frontend Dependencies
       run: |
         cd frontend
         npm install
-    
+
     - name: Build Frontend
       run: |
         cd frontend
         npm run build
-    
-    # Build Backend
+
     - name: Install Backend Dependencies
       run: |
         cd backend
         npm install --production
-    
-    # Deploy Frontend
-    - name: Deploy Frontend to Hostinger
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+
+    # Upload Frontend Artifacts
+    - name: Upload Frontend Artifacts
+      uses: actions/upload-artifact@v4
       with:
-        server: ${{ secrets.HOSTINGER_FTP_HOST }}
-        username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
-        password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
-        local-dir: ./frontend/dist/
-        server-dir: /public_html/
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/node_modules/**
-    
-    # Deploy Backend
-    - name: Deploy Backend to Hostinger
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        name: genzflow-frontend-dist
+        path: frontend/dist/
+        retention-days: 7
+
+    # Upload Backend Artifacts
+    - name: Upload Backend Artifacts
+      uses: actions/upload-artifact@v4
       with:
-        server: ${{ secrets.HOSTINGER_FTP_HOST }}
-        username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
-        password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
-        local-dir: ./backend/
-        server-dir: /backend/
+        name: genzflow-backend-code
+        path: backend/
+        retention-days: 7
         exclude: |
           **/.git*
           **/.git*/**
           **/node_modules/**
           **/logs/**
           **/uploads/**
-    
-    # Health Check
-    - name: Health Check
+          **/.env*
+
+    # Success Message
+    - name: Build Success
       run: |
-        echo "🚀 GenZFlow deployed successfully!"
-        echo "Frontend: https://genzflow.genzspace.in"
-        echo "Backend API: https://genzflow.genzspace.in:5000"
+        echo "🎉 GenZFlow build completed successfully!"
         echo ""
-        echo "Next Steps:"
-        echo "1. Import database schema via phpMyAdmin"
-        echo "2. Configure environment variables in Hostinger"
-        echo "3. Enable Node.js in Hostinger control panel"
+        echo "📦 Artifacts created:"
+        echo "   - genzflow-frontend-dist (Frontend build)"
+        echo "   - genzflow-backend-code (Backend code)"
+        echo ""
+        echo "📁 Download from the 'Summary' tab of this workflow run"
+        echo "🔧 Manual deployment to Hostinger:"
+        echo "   1. Download 'genzflow-frontend-dist'"
+        echo "   2. Extract and upload to /public_html/ in Hostinger File Manager"
+        echo "   3. Download 'genzflow-backend-code'"
+        echo "   4. Extract and upload to /backend/ in Hostinger File Manager"
+        echo ""
+        echo "🌐 Your site will be available at: https://genzflow.genzspace.in"
