--- a/backend/env.example
+++ b/backend/env.example
@@ -1,8 +1,9 @@
-# Database Configuration
-DB_HOST=localhost
-DB_USER=your_mysql_username
-DB_PASSWORD=your_mysql_password
-DB_NAME=genzflow_db
+# Database Configuration (Hostinger MySQL)
+# Replace these with your actual Hostinger database details
+DB_HOST=your_hostinger_mysql_host
+DB_USER=your_hostinger_mysql_username
+DB_PASSWORD=your_hostinger_mysql_password
+DB_NAME=your_hostinger_database_name
 DB_PORT=3306
 
 # JWT Configuration
@@ -10,11 +11,11 @@ JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRES_IN=7d
 
 # Server Configuration
-PORT=5000
-NODE_ENV=development
+PORT=10000
+NODE_ENV=production
 
-# CORS Configuration
-FRONTEND_URL=http://localhost:5173
+# CORS Configuration (Update with your Hostinger domain)
+FRONTEND_URL=https://your-domain.com
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
