--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
     "test": "echo 'No tests configured yet' && exit 0",
     "lint": "echo 'No linting configured yet' && exit 0"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
