--- a/backend/env.example
+++ b/backend/env.example
@@ -11,11 +11,11 @@ JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRES_IN=7d
 
 # Server Configuration
-PORT=10000
-NODE_ENV=production
+PORT=5000
+NODE_ENV=development
 
-# CORS Configuration (Update with your Hostinger domain)
-FRONTEND_URL=https://your-domain.com
+# CORS Configuration (Local Development)
+FRONTEND_URL=http://localhost:5173
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
