--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.44.0",
     "vite": "^7.1.11"
   }
 }
