--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -29,6 +29,7 @@ jobs:
         cd frontend
         rm -rf node_modules package-lock.json
         npm install
+        npm install @rollup/rollup-linux-x64-gnu --save-dev
 
     - name: Build frontend
       run: |
