--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,5 @@
-# API Configuration (Local Development)
-VITE_API_URL=http://localhost:5000
+# API Configuration (Production)
+VITE_API_URL=https://genzflow-backend.onrender.com
 
 # App Configuration
 VITE_APP_NAME=GenZFlow
