--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/post-build.js",
     "preview": "vite preview --port 4173",
     "test": "echo 'No tests configured yet' && exit 0",
     "lint": "echo 'No linting configured yet' && exit 0"
